tests/test_proof/good/money.catala_en
## Test

```catala
declaration scope A:
  internal x content money
  output y content boolean

scope A:
  definition x equals $20,000
  definition y under condition x < $1,000 consequence equals true
  definition y under condition x >= $1,000 and x < $10,000 consequence equals false
  definition y under condition x >= $10,000 and x < $100,000 consequence equals true
  definition y under condition x >= $100,000 consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[RESULT] No potential errors found during the proof mode run.
```
