tests/test_proof/bad/money-empty.catala_en
## Test

The case x < $1000 is not handled

```catala
declaration scope A:
  internal x content money
  output y content boolean

scope A:
  definition x equals $20,000
  definition y under condition x >= $1,000 and x < $10,000 consequence equals false
  definition y under condition x >= $10,000 and x < $100,000 consequence equals true
  definition y under condition x >= $100,000 consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] [A.y] This variable might return an empty error:
┌─⯈ tests/test_proof/bad/money-empty.catala_en:8.10-8.11:
└─┐
8 │   output y content boolean
  │          ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
